// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    >
      <div
        className="MuiBox-root MuiBox-root-29"
      >
        <div />
        <div
          className="MuiGrid-root MuiGrid-container"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <div
                className="MuiBox-root MuiBox-root-133"
              >
                <button
                  className="MuiButtonBase-root MuiButton-root MuiButton-text array-item-add MuiButton-textSecondary"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                     Add Item
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-40"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-44"
              id="id__1"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor="root"
      />
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
        required={false}
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </div>
        <input
          autoFocus={false}
          onAnimationStart={[Function]}
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-40"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-44"
              id="id__13"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    >
      <div
        className="MuiBox-root MuiBox-root-174"
      >
        <div />
        <div
          className="MuiGrid-root MuiGrid-container"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
            >
              <div
                className="MuiBox-root MuiBox-root-175"
              >
                <div
                  className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
                >
                  <div
                    className="MuiBox-root MuiBox-root-176"
                  >
                    <div
                      className="ms-Grid-col ms-sm12  field field-string"
                      style={
                        Object {
                          "marginBottom": 15,
                        }
                      }
                    >
                      <div
                        className="ms-TextField is-required root-49"
                      >
                        <div
                          className="ms-TextField-wrapper"
                        >
                          <div
                            className="ms-TextField-fieldGroup fieldGroup-50"
                          >
                            <input
                              aria-invalid={false}
                              autoFocus={false}
                              className="ms-TextField-field field-51"
                              disabled={false}
                              id="root_0"
                              name="nodejs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              readOnly={false}
                              required={true}
                              type="string"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
            >
              <div
                className="MuiBox-root MuiBox-root-177"
              >
                <div
                  className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
                >
                  <div
                    className="MuiBox-root MuiBox-root-178"
                  >
                    <div
                      className="ms-Grid-col ms-sm12  field field-number"
                      style={
                        Object {
                          "marginBottom": 15,
                        }
                      }
                    >
                      <div
                        className="ms-TextField is-required root-49"
                      >
                        <div
                          className="ms-TextField-wrapper"
                        >
                          <div
                            className="ms-TextField-fieldGroup fieldGroup-50"
                          >
                            <input
                              aria-invalid={false}
                              autoFocus={false}
                              className="ms-TextField-field field-51"
                              disabled={false}
                              id="root_1"
                              name="nodejs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              readOnly={false}
                              required={true}
                              type="number"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-40"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-44"
              id="id__10"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
